--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+table, th, td {
+  border: 1px solid;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -26,6 +30,13 @@
 
 .App-link {
   color: #61dafb;
+}
+table {
+  width: 500px;
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 10px;
 }
 
 @keyframes App-logo-spin {
