--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,14 @@ table, th, td {
   border: 1px solid;
 }
 
+
+.container {
+ 
+  margin-left: 70px;
+  width: 350px;
+  height: 200px; 
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
